syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.github.whileloop.levit.proto";
option java_outer_classname = "Users";

service Users {
    rpc Create (User) returns (Response) {
    }
    rpc Get (User) returns (Response) {
    }
    rpc GetAll (GetRequest) returns (Response) {
    }
    rpc Update (User) returns (Response) {
    }
    rpc Auth (User) returns (Token) {
    }
    rpc ValidateToken (Token) returns (Token) {
    }
}

message GetRequest {
    repeated uint64 ids = 1;
}

message User {
    uint64 id = 1;
    string first = 2;
    string last = 3;
    int64 created_at = 4;
    int64 deleted_at = 5;
    string google_id = 6;
    string facebook_id = 7;
}

message Token {
    string token = 1;
    bool valid = 2;
}

message Response {
    User user = 1;
    repeated User users = 2;
}